--- a/app/templates/edit_student_admin.html
+++ b/app/templates/edit_student_admin.html
@@ -69,7 +69,7 @@
 
     <div class="mt-4 d-grid d-md-flex gap-2">
         <button type="submit" class="btn btn-primary">Update</button>
-        <a href="{{ url_for('main.admin_dashboard') }}" class="btn btn-secondary">Back</a>
+        <a href="{{ url_for('main.admission_campaign') }}" class="btn btn-secondary">Back</a>
     </div>
 </form>
 
