--- a/app/templates/add_student_admin.html
+++ b/app/templates/add_student_admin.html
@@ -87,7 +87,7 @@
 
     <div class="mt-4 d-grid d-md-flex gap-2">
         <button type="submit" class="btn btn-success">Submit</button>
-        <a href="{{ url_for('main.admin_dashboard') }}" class="btn btn-secondary">Back</a>
+        <a href="{{ url_for('main.admission_campaign') }}" class="btn btn-secondary">Back</a>
     </div>
 </form>
 {% endblock %}
