--- a/app/templates/edit_teacher.html
+++ b/app/templates/edit_teacher.html
@@ -29,7 +29,7 @@
 
     <div class="mt-4 d-grid d-md-flex gap-2">
         {{ form.submit(class="btn btn-primary") }}
-        <a href="{{ url_for('main.admin_dashboard') }}" class="btn btn-secondary">Cancel</a>
+        <a href="{{ url_for('main.teacher_management') }}" class="btn btn-secondary">Cancel</a>
     </div>
 </form>
 {% endblock %}
