--- a/app/templates/view_student.html
+++ b/app/templates/view_student.html
@@ -44,7 +44,7 @@
 </div>
 
 <div class="d-flex flex-wrap gap-2">
-    <a href="{{ url_for('main.admin_dashboard') }}" class="btn btn-secondary">⬅️ Back to Dashboard</a>
+    <a href="{{ url_for('main.admission_campaign') }}" class="btn btn-secondary">⬅️ Back </a>
     <a href="{{ url_for('main.edit_student_admin', id=student.id) }}" class="btn btn-primary">✏️ Edit Details</a>
 </div>
 {% endblock %}
